started porting to 1.21.1 and added compat to Fabric's Transfer API